' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml KundeWriteService

skinparam classAttributeIconSize 0

package com.acme.mannschaftsmitglied {
    package java.util {
        class UUID
    }
    package entity {
        class Mitglied << entity >>
    }

    package repository {
        class MitgliedRepository << control >> << @Repository >>
    }

    package service #DDDDDD {
        class MitgliedWriteService << control >> << @Service >> {
            + suspend create(mitglied: Mitglied): Mitglied
            + suspend update(mitglied: Mitglied, id: UUID)
            + suspend deleteById(id: UUID)
        }

        MitgliedWriteService o--> "1" MitgliedRepository : repo
        MitgliedWriteService ..> Mitglied
        MitgliedWriteService ..> UUID
    }
}

hide empty members


@enduml
